# hackinglab-eol

./: HOSTNET-IPs.txt  IPAS15916ABN.txt  IPAS202553DUO.txt  clean_countAS15916.json  clean_versions.json  clean_versionsAS15916.json  clean_versionsAS8315.json  new_script.sh  output.csv  redo_eol.sh  script.sh  test.sh  zgrab_results.json  zgrab_resultsAS15916.json  zmap_output.csv  zmap_outputAS15916.csv  zmap_outputAS20857.csv
data_analysis/: analysis.ipynb
data_georgi/: AS39572-443.txt  AS39572-465.txt  AS39572-587.txt  AS60781-1433.txt  AS60781-21.txt  AS60781-25.txt  AS60781-465.txt  AS60781-587.txt
data_konstantin/: clean_count_443.json  clean_count_80.json  clean_count_8080.json  clean_versions_443_domains.json  clean_versions_8080_domains.json  clean_versions_80_domains.json  clean_versions_with_ip_80.json  clean_versions_with_ip_AS20857_443_19may.json  clean_versions_with_ip_AS20857_8080_19may.json  clean_versions_with_ip_AS20857_80_19may.json  clean_versions_with_ip_AS20940_443.json  clean_versions_with_ip_domains_443.json  clean_versions_with_ip_domains_8080.json  mongodb_versions_AS20857.json  mysql_versions_AS20857.json  nl_domains.json  nl_domains_100.json  nl_domains_nl_ips_only.json  redis_versions_AS20857.json  server_eol_results_80.json  server_eol_with_ip.json  zgrab_targets.csv  zgrab_targets_www.csv
data_matei/: 20847-ips.txt  31477-ips.txt  AutomaticPorts.txt  Ports_Status.txt  auto-ports.txt  plotting.ipynb  (+12 more)
eol-finder/: Cargo.toml  README.md
eol-finder/src/: asn_lookup.rs  cve_checker.rs  eol_checker.rs  main.rs  version_scanner.rs  zmap.rs
(+469 files in other folders)
