[package]
name = "eol-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
bincode = "2.0.1"
async-trait = "0.1.88"
log = "0.4.27"
ftail = "0.3.0"
default-net = "0.22.0"
ctrlc = "3.4.7"
regex = "1.11.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
nix = "0.30.1"
urlencoding = "2.1.3"
chrono = "0.4.41"
intervaltree = "0.2.7"
itertools = "0.14.0"
